k8s/dvr/overlays/sonarr/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      containers:
        - name: app
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: sonarr
