k8s/dvr/overlays/sonarr/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 8989
      protocol: TCP
      targetPort: http
